--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "3b99f05d-ae1a-4c1c-b7d3-e16963076e64"
 authors = ["Andy Liang"]
 version = "0.1.0"
 
+[deps]
+PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
+
 [compat]
 julia = "1"
 
