--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
 
 [compat]
 julia = "1"
+PkgTemplates = "0.7.26"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
