--- a/Project.toml
+++ b/Project.toml
@@ -6,12 +6,14 @@ version = "0.1.0"
 [deps]
 PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
 
+
 [compat]
-julia = "1"
 PkgTemplates = "0.7.26"
+julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 
 [targets]
-test = ["Test"]
+test = ["Test", "SafeTestsets"]
